# fochan

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.sql
.github/workflows/: build-deploy.yml  deploy-only.yml  deploy.yml  pull-on-server.yml  test.yml
migrations/2024-05-09-221323_main_tables/: down.sql  up.sql
migrations/2024-05-09-234458_topics/: down.sql  up.sql
src/: main.rs  schema.rs  tests.rs
src/models/: mod.rs
tests/: test_file.sh
