[package]
name = "fochan-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"]}
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi= { version = "0.3.9", features = ["winerror"] }
diesel = { version = "2.1.0", features = ["postgres"]}
dotenvy = "0.15"
